@@ -1,8 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.67 2005/02/05 03:38:12 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.68 2005/02/07 05:31:50 agaffney Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
+
+  06 Feb 2005; Andrew Gaffney <agaffney@gentoo.org>
+  Added GRP checkbox in Stage.py
 
   01 Feb 2005; John Laliberte <allanonl@bu.edu>
   ExtraPackages.py - Added class Details.  Large portions updated so
