@@ -1,11 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.67 2005/02/07 01:18:21 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.68 2005/02/07 05:31:50 agaffney Exp $
 
 *GLI-0.01 (9 Feb 2004)
 
   6 Feb 2005; Andrew Gaffney <agaffney@gentoo.org>
-  Initial code for quickpkg GRP support.
+  Initial code for quickpkg GRP support. Fix loop to grab packages from
+  'emerge -p blah'
 
   6 Feb 2005; Preston Cody <codeman@gentoo.org>
   check for dhcp in the network stuff and emerge it if it is.
